deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: vc-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vc-cli
  template:
    metadata:
      labels:
        app: vc-cli
        version: v1
    spec:
      containers:
        - name: vc-cli
          command: [
            "/go/src/vc.cli/vc-cli",
            # "--selector=static",
            "--server_address=0.0.0.0:8080",
            "--broker_address=0.0.0.0:10001",
            "--registry=kubernetes"
          ]
          image: zeqi/vc-cli:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 7105
            protocol: TCP
            name: http
          - containerPort: 8080
            protocol: TCP
            name: tcp
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vc-cli
  name: vc-cli
  namespace: default

  
spec:
  ports:
  - port: 80
    targetPort: 7105
    name: http
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: tcp
  selector:
    app: vc-cli
    version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vc-cli-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - cli.vc.k8s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vc-cli
  namespace: default
spec:
  hosts:
  - cli.vc.k8s
  gateways:
  - vc-cli-gateway
  http:
  - match:
    route:
    - destination:
        port:
          number: 80
        host: vc-cli
